syntax = "proto3";

option java_package = "org.example.slaughterhouse";
option java_outer_classname = "SlaughterServiceProto";

service SlaughterhouseService{
  rpc GetAnimalsForProduct (ProductRequest) returns (AnimalListResponse);
  rpc GetProductsForAnimal (AnimalRequest) returns (ProductListResponse);
}

message ProductRequest {
  int32 productId = 1;
}

message AnimalRequest {
  int32 animalId = 1;
}

message Animal {
  int32 id = 1;
  string registrationNumber= 2;
}

message Product {
  int32 id = 1;
  string description = 2;
}

message AnimalListResponse {
  repeated Animal animals = 1;
}

message ProductListResponse {
  repeated Product products = 1;
}
